--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@web3modal/ethereum": "^2.0.0-rc.1",
     "@web3modal/react": "^2.0.0-rc.1",
     "ethers": "^5.7.2",
+    "ipfs-core": "^0.18.0",
     "next": "^13.1.1",
     "next-routes": "^1.4.2",
     "react": "^18.2.0",
@@ -18,7 +19,6 @@
     "web3": "^1.7.4",
     "web3modal": "^1.9.10"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server.js"
